--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@
     t.src=v;s=b.getElementsByTagName(e)[0];
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', 'YOUR_PIXEL_ID'); // Substitua pelo seu Pixel ID
+    fbq('init', '123456789012345'); // Substitua pelo seu Pixel ID real
     fbq('track', 'PageView');
   </script>
   <noscript>
     <img height="1" width="1" style="display:none"
-         src="https://www.facebook.com/tr?id=YOUR_PIXEL_ID&ev=PageView&noscript=1"/>
+         src="https://www.facebook.com/tr?id=123456789012345&ev=PageView&noscript=1"/>
   </noscript>
   <!-- End Facebook Pixel Code -->
 
   <script>
     setTimeout(function() {
-      window.location.href = "https://wa.me/5516991956016/?text=bomdia,queroometododalabiadaconquista";
+      window.location.href = "https://wa.me/5516991956016/?text=bom%20dia,%20quero%20o%20metodo%20da%20labia%20da%20conquista";
     }, 3000);
   </script>
 </head>
